@@ -1,5 +1,5 @@
 [comment {-*- tcl -*- doctools manpage}]
-[comment {$Id: logger.man,v 1.10 2004/05/26 01:09:36 mic42 Exp $}]
+[comment {$Id: logger.man,v 1.11 2004/09/06 00:59:11 mic42 Exp $}]
 [manpage_begin logger n 0.4]
 [moddesc {Object Oriented logging facility}]
 [titledesc {System to control logging of events.}]
@@ -50,6 +50,19 @@ course, also be possible to then seperately configure [term bar].
 
 If a logger service is initialized and the parent does not yet exist, the
 parent is also created. 
+
+[call [cmd logger::import] [opt [option -all] ] [opt "[option -prefix] [arg prefix]" ] [opt "[option -namespace] [arg namespace]" ] [arg service] ]
+
+Import the logger service commands into the current namespace. Without the [option -all] option
+only the commands corresponding to the log levels are imported. If [option -all] is given, 
+all the [cmd \${log}::cmd] style commands are imported. Existing commands with the same name
+are overwritten without warning.
+
+If the [option -prefix] option is given, the commands are imported with the given [arg prefix]
+prepended to their names. 
+
+If the [option -namespace] option is given, the commands are imported into the given namespace.
+
 
 [call [cmd logger::services]]
 
